Fixed vertical alignment of cube. Tweaked page text slightly

--- a/stylin.css
+++ b/stylin.css
@@ -38,5 +38,5 @@ h1 {
 
 #headercanvas {
     display:inline-block;
-    vertical-align: middle;
+    vertical-align: text-bottom;
 }
